name:                miranda
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Boyun Tang
maintainer:          tangboyun@hotmail.com
-- copyright:           
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:   
                       MiRanda.Types
                       MiRanda.Util
                       MiRanda.Score
                       MiRanda.Sheet
                       MiRanda.Diagram
                       MiRanda.IO
                       MiRanda.Storage.Type
                       MiRanda.Storage.Util
                       MiRanda.Binary
                       MiRanda.Storage.IO
  other-modules:       
                       MiRanda.Sheet.SiteSheet
                       MiRanda.Sheet.TargetSheet
                       MiRanda.Sheet.GeneSheet
                       MiRanda.Sheet.Styles
                       MiRanda.Parser
                       MiRanda.Parameter
                       MiRanda.BranchLen
                       MiRanda.Diagram.Icon
                       MiRanda.Diagram.Alignment
                       MiRanda.Diagram.LocalAU
                       MiRanda.Diagram.Pos
                       MiRanda.Diagram.Structure
                       MiRanda.Parameter.PCT
                       MiRanda.Parameter.FSPPara
                       MiRanda.Parameter.BL
                       MiRanda.BranchLen.Newick

  build-depends:       
                       base,
                       attoparsec,
                       bytestring >= 0.10.0.0,
                       binary >= 0.7.0.0,
                       SpreadsheetML-rich >= 0.1.1.0,
                       colour,deepseq,vector,
                       unordered-containers,
                       containers,
                       filepath,parallel,diagrams-lib,
                       diagrams-cairo,process,directory,
                       time,split,bio-seq-embl,zlib
                       

  hs-source-dirs:      src
  ghc-options:         -Wall

